# Motor-migration

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md
k8s/: migration-job.yaml.example  secrets.yaml.example
src/: main.rs
src/analysis/: json_analyzer.rs  mod.rs
src/cli/: config.rs  mod.rs  runner.rs
src/db/: mod.rs  postgres.rs  sqlserver.rs  types.rs
src/gui/: app.rs
src/migration/: engine.rs
src/storage/: bcp.rs  file_source.rs  mod.rs  s3.rs
