[package]
name = "sql_migration_engine"
version = "1.0.0"
edition = "2021"
description = "Motor de migración SQL Server a PostgreSQL con GUI"

[features]
default = ["gui"]
gui = ["dep:eframe", "dep:egui", "dep:egui_extras"]

[dependencies]
# GUI (optional, not needed for CLI mode)
eframe = { version = "0.29", optional = true }
egui = { version = "0.29", optional = true }
egui_extras = { version = "0.29", features = ["all_loaders"], optional = true }

# Async runtime
tokio = { version = "1.42", features = ["full"] }
tokio-util = { version = "0.7", features = ["compat"] }
bytes = "1.9"

# SQL Server
tiberius = { version = "0.12", default-features = false, features = ["rustls", "chrono", "bigdecimal"] }

# PostgreSQL
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4", "with-serde_json-1", "with-uuid-1"] }
postgres-types = { version = "0.2", features = ["derive"] }

# Serialización
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Utilidades
chrono = { version = "=0.4.38", features = ["serde"] }
uuid = { version = "1.11", features = ["v4", "serde"] }
time = "=0.3.36"  # Pin to version compatible with Rust 1.86
bigdecimal = { version = "0.4", features = ["serde"] }
thiserror = "2.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Paralelismo
futures = "0.3"

# Conexión TCP para SQL Server
async-net = "2.0"

# S3 Storage (pinned to versions compatible with Rust 1.86)
aws-sdk-s3 = "=1.65.0"
aws-config = "=1.5.10"
aws-credential-types = "=1.2.1"
aws-smithy-types = "=1.2.9"
aws-smithy-runtime-api = "=1.7.3"
aws-smithy-runtime = "=1.7.4"
aws-smithy-async = "=1.2.3"
aws-smithy-xml = "=0.60.9"
aws-smithy-http = "=0.60.11"
aws-types = "=1.3.3"

# CSV parsing
csv = "1.3"

# BCP detection
which = "7.0"

# Temp files
tempfile = "3.14"

[profile.release]
opt-level = 3
lto = true
